--- a/functions/package.json
+++ b/functions/package.json
@@ -20,7 +20,9 @@
 		"firebase-admin": "^10.3.0",
 		"firebase-functions": "^4.1.1",
 		"formidable": "^2.1.1",
+		"path": "^0.12.7",
 		"uuid-v4": "^0.1.0",
+		"uuid4": "^2.0.3",
 		"web-push": "^3.5.0"
 	},
 	"devDependencies": {
